<resources>
    <string name="app_name">TesteChatFirebase</string>
    <string name="Enter">Enter</string>
    <string name="warning">Não tem uma conta ? Crie aqui!</string>
    <string name="mail">Digite seu e-mail</string>
    <string name="password">Digite seu password</string>
    <string name="name">Nome</string>
    <string name="Register">Cadastrar</string>
    <string name="contacts">contacts</string>
    <string name="logout">logout</string>
    <string name="btn_chat">Enviar</string>
    <string name="message">Digite a mensagem</string>

</resources>
